--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,10 @@ dependencies:
   url_launcher: ^6.0.20
   random_string: ^2.3.1
   fluttertoast: ^8.2.4
-
+  tflite_flutter: ^0.10.0
+  image_picker: ^0.8.7
+  image: ^3.2.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
